Restrict max width of image container to stop image overflowing margins

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -31,3 +31,7 @@
 .color-box.hooloovoo {
   background-color: var(--color-brand-hooloovoo);
 }
+
+.cover-image {
+  max-width: 800px;
+}
